--- a/Makefile.impls
+++ b/Makefile.impls
@@ -37,7 +37,7 @@ wasm_MODE = wasmtime
 IMPLS = ada ada.2 awk bash basic bbc-basic c c.2 chuck clojure coffee common-lisp cpp crystal cs d dart \
 	elisp elixir elm erlang es6 factor fantom fennel forth fsharp go groovy gnu-smalltalk \
 	guile haskell haxe hy io janet java java-truffle js jq julia kotlin livescript logo lua make mal \
-	matlab miniMAL nasm nim objc objpascal ocaml perl perl6 php picolisp pike plpgsql \
+	matlab miniMAL nasm naveen nim objc objpascal ocaml perl perl6 php picolisp pike plpgsql \
 	plsql powershell prolog ps python python.2 r racket rexx rpython ruby rust scala scheme skew sml \
 	swift swift3 swift4 swift5 tcl ts vala vb vhdl vimscript wasm wren yorick xslt zig
 
@@ -154,6 +154,7 @@ mal_STEP_TO_PROG =           impls/mal/$($(1)).mal
 matlab_STEP_TO_PROG =        impls/matlab/$($(1)).m
 miniMAL_STEP_TO_PROG =       impls/miniMAL/$($(1)).json
 nasm_STEP_TO_PROG =          impls/nasm/$($(1))
+naveen_STEP_TO_PROG =				 impls/naveen/$($(1)).js
 nim_STEP_TO_PROG =           impls/nim/$($(1))
 objc_STEP_TO_PROG =          impls/objc/$($(1))
 objpascal_STEP_TO_PROG =     impls/objpascal/$($(1))
